[package]
name = "athena-led"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
reqwest = { version = "0.11.20", features = ["json", "rustls-tls"], default-features = false }
chrono = { version = "0.4.31", features = ["serde"] }
anyhow = "1.0.75"
sysfs_gpio = "0.6.1"
clap = { version = "4.4.4", features = ["derive"] }
once_cell = "1.18.0"
